--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,2 +1,5 @@
-%h1 Home#index
-%p Find me in app/views/home/index.html.haml
+.hero-unit
+  %h1 Little Boxes
+  %p Keep track of your stuff
+
+  %a.btn.btn-primary.btn-large{href: search_items_url} Search
