--- a/app/views/adjustments/index.html.haml
+++ b/app/views/adjustments/index.html.haml
@@ -1,8 +1,11 @@
+.page-header
+  %h1 Updating Inventory
+
 = simple_form_for(:adjustment, :defaults => { :input_html => { :class => 'input-xlarge' } }) do |f|
   = f.error_notification
 
   .form-inputs
-    = f.input :action, collection: ['Decrement', 'Increment', 'Set']
+    = f.input :action, collection: ['Decrement', 'Increment', 'Set'], default: 'Decrement'
     = f.input :name, autofocus: true
     = f.input :delta
 
